@@ -50,6 +50,8 @@ public:
 		{ return -1; }
 	virtual bool server_response(int id, unsigned char *data, int datalen);
 	virtual void end_terrain_editing();
+					// About to close this browser.
+	virtual bool closing(bool can_cancel = false);
 					// Menu items:
 	static void on_shapes_popup_add2group_activate(
 					GtkMenuItem *item, gpointer udata);
